# known-schemes

./: CHANGES.md  Cargo.toml  README.md
lib/known-schemes/: Cargo.toml
lib/known-schemes/src/: lib.rs  prelude.rs  uri_scheme.rs
lib/known-schemes/src/integrations/: ada_url.rs  amq_protocol_uri.rs  clap.rs  email_address.rs  fluent_uri.rs  iref.rs  iri_string.rs  magnet_url.rs  oxiri.rs  uriparse.rs  url.rs
