[package]
name = "known-schemes"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
std = []
all = []
unstable = []

[dev-dependencies]

[dependencies]
email_address = { version = "0.2", default-features = false, optional = true }
fluent-uri = { version = "0.3", default-features = false, optional = true }
iref = { version = "3.2", default-features = false, optional = true }
iri-string = { version = "0.7", default-features = false, optional = true }
uriparse = { version = "0.6", default-features = false, optional = true }
url = { version = "2.5", default-features = false, optional = true }
